--- a/index.html
+++ b/index.html
@@ -6,29 +6,23 @@
 </head>
 <body> 
        <header> 
-            <img class="imagen1" src="./Assets/redcliffe logo.jpg" alt="Logo de Redcliffe">
-            <h1>Language excellency</h1>
-            <a class="link" href="./sections/languages.html">Languages</a>
-            <a class="link" href="./sections/courses.html">Courses</a>
-            <a class="link" href="./sections/about_us.html">About us</a>
-            <a class="link" href="./sections/contact.html">Contact</a>
-            <a class="link" href="">Profile</a>
-            <a class="link" href="">Settings</a>
-            <a class="link" href="">Payments</a>  
-            
+            <img class="imagen1" src="./Assets/Logo.png" alt="Logo de Redcliffe">
+        <div class="div1">
+            <a class="link1" href="./sections/languages.html">Languages</a>
+            <a class="link1" href="./sections/courses.html">Courses</a>
+            <a class="link1" href="./sections/about_us.html">About us</a>
+            <a class="link1" href="./sections/contact.html">Contact</a>
+            </div>   
         </header>
-        <section class="section1">
-            <h2>Redcliffe Languages</h2>
-            <img class="imagen2" src="./Assets/whatsapp.png" alt="Iconos de redes sociales">
-            <button id="boton1">Test your language level!</button>     
-        </section>
+         </section>
         <section class="section2">
+    
             <a href=""><iframe width="865" height="555" 
-            src="https://www.youtube.com/embed/BF83GlBo-d0" 
+            src="https://www.youtube.com/embed/BF83GlBo-d0"
             title="Why these multilingual school kids want to learn more languages" 
             frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></a>
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </a>
         </section>
         <section class="section3">
             <img class="imagensection3" src="./Assets/1.png" alt="Guy studying">
@@ -43,11 +37,12 @@
             <a class="link2" href="">Business</a>
         </section>
         <footer class="footer">
-            <p>Redcliffe Languages</p>
+            <p class="footerbrand">Redcliffe Languages</p>
             <a href="">Contact information</a>
             <a href="">Copyright</a>
             <a href="">Terms of Service and Privacy Policy</a>
          <a href="">Newsletter Signup</a>
+         <img src="./Assets/whatsapp.png" alt="Iconos de redes sociales">
         </footer>
     </body>
 </html>
