--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 <body> 
        <header> 
             <img class="imagen1" src="./Assets/Logo.png" alt="Logo de Redcliffe">
-        <div class="div1">
+        <ul>
             <a class="link1" href="./sections/languages.html">Languages</a>
             <a class="link1" href="./sections/courses.html">Courses</a>
             <a class="link1" href="./sections/about_us.html">About us</a>
             <a class="link1" href="./sections/contact.html">Contact</a>
-            </div>   
+        </ul>
+        <button class="boton1">Test your language!</button>
         </header>
          </section>
         <section class="section2">
