--- a/index.html
+++ b/index.html
@@ -5,43 +5,38 @@
     <title>Redcliffe Languages</title>
 </head>
 <body> 
-       <header> 
+    <section class="section1">
             <img class="imagen1" src="./Assets/Logo.png" alt="Logo de Redcliffe">
-        <ul>
+        <ul class="ul1">
             <a class="link1" href="./sections/languages.html">Languages</a>
             <a class="link1" href="./sections/courses.html">Courses</a>
             <a class="link1" href="./sections/about_us.html">About us</a>
             <a class="link1" href="./sections/contact.html">Contact</a>
         </ul>
+        <h1 class="slogan">Redcliffe Languages: Your Journey Begins Here </h1>
         <button class="boton1">Test your language!</button>
-        </header>
          </section>
-        <section class="section2">
-    
-            <a href=""><iframe width="865" height="555" 
-            src="https://www.youtube.com/embed/BF83GlBo-d0"
-            title="Why these multilingual school kids want to learn more languages" 
-            frameborder="0" 
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </a>
-        </section>
-        <section class="section3">
-            <img class="imagensection3" src="./Assets/1.png" alt="Guy studying">
-            <img class="imagensection3" src="./Assets/2.png" alt="Group of students studying">
-            <img class="imagensection3" src="./Assets/3.png" alt="Group of students at a table">
+
+    <section class="section2">    
+            <iframe class="section2v" width="1000" height="600" src="https://www.youtube.com/embed/BF83GlBo-d0" title="Why these multilingual school kids want to learn more languages" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+    <section class="section3">
+            <img class="imagensection31" src="./Assets/1.png" alt="Guy studying">
+            <img class="imagensection32" src="./Assets/2.png" alt="Group of students studying">
+            <img class="imagensection33" src="./Assets/3.png" alt="Group of students at a table">
         </section>
         <section class="section4">
-            <a class="link2" href="">In-company Courses</a>
-            <a class="link2" href="">Adults</a>
-            <a class="link2" href="">International exams</a>
-            <a class="link2" href="">Teens and Young learners</a>
-            <a class="link2" href="">Business</a>
+            <a class="link21" href="">In-company Courses</a>
+            <a class="link22" href="">Adults</a>
+            <a class="link23" href="">International exams</a>
+            <a class="link24" href="">Business</a>
         </section>
         <footer class="footer">
-            <p class="footerbrand">Redcliffe Languages</p>
-            <a href="">Contact information</a>
-            <a href="">Copyright</a>
-            <a href="">Terms of Service and Privacy Policy</a>
+            <p class="footerbrand1">Redcliffe Languages</p>
+            <a class="footerbrand2" href="">Contact information</a>
+            <a class="footerbrand3" href="">Copyright</a>
+            <a class="footerbrand4" href="">Terms of Service and Privacy Policy</a>
          <a href="">Newsletter Signup</a>
          <img src="./Assets/whatsapp.png" alt="Iconos de redes sociales">
         </footer>
