--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
             <a class="link24" href="">Business</a>
         </section>
         <footer class="footer">
-            <p class="footerbrand1">Redcliffe Languages</p>
             <a class="footerbrand2" href="">Contact information</a>
             <a class="footerbrand3" href="">Copyright</a>
             <a class="footerbrand4" href="">Terms of Service and Privacy Policy</a>
          <a href="">Newsletter Signup</a>
-         <img src="./Assets/whatsapp.png" alt="Iconos de redes sociales">
+         <img class="redes" src="./Assets/whatsapp.png" alt="Iconos de redes sociales">
         </footer>
     </body>
 </html>
