--- a/sections/languages.html
+++ b/sections/languages.html
@@ -5,13 +5,14 @@
      <title>Languages</title>
 </head>
 <Header>
-    <h1>Languages</h1>
-    <a href="../index.html">Home</a>
+    <h1 class="title">Languages</h1>
+    <a class="back" href="../index.html">Home</a>
 </Header>
 <body>
-<section class="languages1">
-    <h1>English</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+<section class="section1">
+    <div class="languages1">
+    <h1 class="titulo1">English</h1>
+    <p class="texto1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Necessitatibus mollitia quisquam vitae dolores repellat
         earum nam explicabo eaque sit distinctio perspiciatis 
         asperiores delectus a deleniti minima, dolorem ratione eum? 
@@ -24,8 +25,8 @@
         earum nam explicabo eaque sit distinctio perspiciatis 
         asperiores delectus a deleniti minima, dolorem ratione eum? 
         Perspiciatis!</p>
-    <h1>Spanish</h1>
-    <p>LLorem ipsum dolor sit amet consectetur adipisicing elit.
+    <h1 class="titulo2">Spanish</h1>
+    <p class="texto2">LLorem ipsum dolor sit amet consectetur adipisicing elit.
         Necessitatibus mollitia quisquam vitae dolores repellat
         earum nam explicabo eaque sit distinctio perspiciatis 
         asperiores delectus a deleniti minima, dolorem ratione eum? 
@@ -38,8 +39,8 @@
         earum nam explicabo eaque sit distinctio perspiciatis 
         asperiores delectus a deleniti minima, dolorem ratione eum? 
         Perspiciatis!</p>
-    <h1>Italian</h1>
-    <p>LLorem ipsum dolor sit amet consectetur adipisicing elit.
+    <h1 class="titulo3">Italian</h1>
+    <p class="texto3">LLorem ipsum dolor sit amet consectetur adipisicing elit.
         Necessitatibus mollitia quisquam vitae dolores repellat
         earum nam explicabo eaque sit distinctio perspiciatis 
         asperiores delectus a deleniti minima, dolorem ratione eum? 
@@ -52,8 +53,8 @@
         earum nam explicabo eaque sit distinctio perspiciatis 
         asperiores delectus a deleniti minima, dolorem ratione eum?  
            Perspiciatis!</p>
-    <h1>French</h1>
-    <p>LLorem ipsum dolor sit amet consectetur adipisicing elit.
+    <h1 class="titulo4">French</h1>
+    <p class="texto4">LLorem ipsum dolor sit amet consectetur adipisicing elit.
         Necessitatibus mollitia quisquam vitae dolores repellat
         earum nam explicabo eaque sit distinctio perspiciatis 
         asperiores delectus a deleniti minima, dolorem ratione eum? 
@@ -66,8 +67,8 @@
         earum nam explicabo eaque sit distinctio perspiciatis 
         asperiores delectus a deleniti minima, dolorem ratione eum? 
            Perspiciatis!</p>
-    <h1>German</h1>
-    <p>LLorem ipsum dolor sit amet consectetur adipisicing elit.
+    <h1 class="titulo5">German</h1>
+    <p class="texto5">LLorem ipsum dolor sit amet consectetur adipisicing elit.
         Necessitatibus mollitia quisquam vitae dolores repellat
         earum nam explicabo eaque sit distinctio perspiciatis 
         asperiores delectus a deleniti minima, dolorem ratione eum? 
@@ -80,8 +81,8 @@
         earum nam explicabo eaque sit distinctio perspiciatis 
         asperiores delectus a deleniti minima, dolorem ratione eum? 
            Perspiciatis!</p>
-    <h1>Portuguese</h1>
-    <p>LLorem ipsum dolor sit amet consectetur adipisicing elit.
+    <h1 class="titulo6">Portuguese</h1>
+    <p class="texto6">LLorem ipsum dolor sit amet consectetur adipisicing elit.
         Necessitatibus mollitia quisquam vitae dolores repellat
         earum nam explicabo eaque sit distinctio perspiciatis 
         asperiores delectus a deleniti minima, dolorem ratione eum? 
@@ -94,8 +95,9 @@
         earum nam explicabo eaque sit distinctio perspiciatis 
         asperiores delectus a deleniti minima, dolorem ratione eum? 
            Perspiciatis!</p>
+        </div>
 </section>
-    <h1></h1>
+
     <footer class="footer">
         <p>Redcliffe Languages</p>
         <a href="">Contact information</a>
