--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
     <title>Redcliffe Languages</title>
 </head>
@@ -13,7 +17,7 @@
             <a class="link1" href="./sections/about_us.html">About us</a>
             <a class="link1" href="./sections/contact.html">Contact</a>
         </ul>
-        <h1 class="slogan">Redcliffe Languages: Your Journey Begins Here </h1>
+        <h1 class="slogan">Redcliffe Languages: Your journey begins here </h1>
         <button class="boton1">Test your language!</button>
          </section>
 
