--- a/index.html
+++ b/index.html
@@ -10,21 +10,26 @@
 </head>
 <body> 
     <section class="section1">
-            <img class="imagen1" src="./Assets/Logo.png" alt="Logo de Redcliffe">
+            <img class="imagen1" src="./Assets/redcliffe logo.jpg" alt="Logo de Redcliffe">
         <ul class="ul1">
             <a class="link1" href="./sections/languages.html">Languages</a>
             <a class="link1" href="./sections/courses.html">Courses</a>
             <a class="link1" href="./sections/about_us.html">About us</a>
             <a class="link1" href="./sections/contact.html">Contact</a>
         </ul>
-        <h1 class="slogan">Redcliffe Languages: Your journey begins here </h1>
-        <button class="boton1">Test your language!</button>
+        <h1 class="slogan">Redcliffe Languages </h1>
          </section>
 
     <section class="section2">    
             <iframe class="section2v" width="1000" height="600" src="https://www.youtube.com/embed/BF83GlBo-d0" title="Why these multilingual school kids want to learn more languages" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+    <div class="transition">
+        <p class="transitiontext1">"The journey of a thousand miles begins with a single step."</p>
+        <p class="transitiontext2">"Success is not final, failure is not fatal: It is the courage to continue that counts."</p>
+        <p class="transitiontext3">"Every language you learn opens a new door to the world."
+        </p>
+    </div>
     <section class="section3">
             <img class="imagensection31" src="./Assets/1.png" alt="Guy studying">
             <img class="imagensection32" src="./Assets/2.png" alt="Group of students studying">
