--- a/sections/courses.html
+++ b/sections/courses.html
@@ -3,129 +3,117 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../css/prueba.css" rel="stylesheet">
-    <title>Bootstrap demo</title>
+    <link href="../css/courses.css" rel="stylesheet">
+    <title>Courses</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
-  </body>
-</html>
-</head>
-<Header>
-    <h1>Courses</h1>
-    <a href="../index.html">Home</a>
+  <Header>
+    <h1>Courses</h1>    
 </Header>
 <body>
-<section class="courses1">    
+<a href="../index.html">Home</a>
+<section class="courses1"> 
+    <div>
     <h1>English Courses</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!</p>
+    <p>Embark on your journey to mastering the English language with our beginner course! 
+        This 12-week program is tailored to introduce students to essential English vocabulary,
+         grammar, and conversational skills. Through engaging lessons, interactive multimedia resources, 
+         and practical exercises, students will learn to navigate everyday situations with confidence. 
+         Our experienced instructors provide personalized feedback and support, ensuring a strong foundation
+          in listening, speaking, reading, and writing. Whether for travel, work, or personal enrichment, 
+          this course will equip you with the tools you need to communicate effectively in English. 
+          Join us and start your English language adventure today!</p>
+        </div>
+        <div>
     <h1>Spanish Courses</h1>
-    <p>LLorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!</p>
+    <p>¡Descubre la belleza del idioma español con nuestro curso integral para principiantes!
+         Este programa de 12 semanas está diseñado para introducir a los estudiantes al vocabulario
+          básico, la gramática y las habilidades conversacionales en español. A través de lecciones
+           interactivas, recursos multimedia atractivos y ejercicios prácticos, los estudiantes 
+           desarrollarán la capacidad de entender y comunicarse en situaciones cotidianas. 
+           Nuestros instructores experimentados brindan retroalimentación y apoyo personalizados,
+            asegurando una base sólida en escucha, habla, lectura y escritura. Ya sea que te 
+            prepares para viajar, trabajar o enriquecer tus conocimientos personales, este curso 
+            te pondrá en el camino hacia la fluidez. 
+        ¡Únete a nosotros y comienza tu viaje de habla hispana hoy mismo!</p>
+        </div>
+        <div>
     <h1>Italian Courses</h1>
-    <p>LLorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum?  
-           Perspiciatis!</p>
+    <p>Scopri la bellezza della lingua italiana con il nostro corso completo per principianti! 
+        Questo programma di 12 settimane è progettato per introdurre gli studenti al vocabolario 
+        di base, alla grammatica e alle abilità conversazionali in italiano. Attraverso lezioni 
+        interattive, risorse multimediali coinvolgenti ed esercizi pratici, gli studenti 
+        svilupperanno la capacità di comprendere e comunicare in situazioni quotidiane. 
+        I nostri istruttori esperti forniscono feedback e supporto personalizzati, garantendo 
+        una solida base in ascolto, conversazione, lettura e scrittura. Che tu stia preparando 
+        per viaggiare, lavorare o arricchire la tua conoscenza personale, questo corso ti metterà 
+        sulla strada della fluidità. 
+        Unisciti a noi e inizia oggi il tuo viaggio nella lingua italiana!</p>
+        </div>
+        <div>
     <h1>French Courses</h1>
-    <p>LLorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-           Perspiciatis!</p>
+    <p>Découvrez la beauté de la langue française avec notre cours complet pour débutants! 
+        Ce programme de 12 semaines est conçu pour initier les étudiants au vocabulaire de base,
+        à la grammaire et aux compétences conversationnelles en français. Grâce à des leçons 
+        interactives, des ressources multimédias engageantes et des exercices pratiques, 
+        les étudiants développeront la capacité de comprendre et de communiquer dans des situations
+         quotidiennes. Nos instructeurs expérimentés fournissent des retours et un soutien 
+         personnalisés, garantissant une base solide en écoute, conversation, lecture et écriture. 
+         Que vous vous prépariez pour voyager, travailler ou enrichir vos connaissances personnelles,
+          ce cours vous mettra sur la voie de la maîtrise. 
+        Rejoignez-nous et commencez dès aujourd'hui votre aventure linguistique en français!</p>
+        </div>
+        <div>
     <h1>German Courses</h1>
-    <p>LLorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-           Perspiciatis!</p>
+    <p>Entdecken Sie die Schönheit der deutschen Sprache mit unserem umfassenden Anfängerkurs! 
+        Dieses 12-wöchige Programm ist darauf ausgelegt, den Schülern grundlegendes Vokabular,
+         Grammatik und Konversationsfähigkeiten in Deutsch zu vermitteln. Durch interaktive 
+         Lektionen, ansprechende multimediale Ressourcen und praktische Übungen entwickeln die 
+         Schüler die Fähigkeit, sich in alltäglichen Situationen zu verständigen. Unsere erfahrenen
+          Lehrkräfte bieten individuelles Feedback und Unterstützung, um eine solide Basis in Hören,
+           Sprechen, Lesen und Schreiben zu gewährleisten. Ob Sie sich auf Reisen, Arbeit oder 
+           persönliche Bereicherung vorbereiten, dieser Kurs wird Sie auf den Weg zur 
+           Sprachbeherrschung bringen. 
+        Schließen Sie sich uns an und beginnen Sie noch heute Ihr deutsches Sprachabenteuer!</p>
+        </div>
+        <div>
     <h1>Portuguese Courses</h1>
-    <p>LLorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-        Perspiciatis!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus mollitia quisquam vitae dolores repellat
-        earum nam explicabo eaque sit distinctio perspiciatis 
-        asperiores delectus a deleniti minima, dolorem ratione eum? 
-           Perspiciatis!</p>
+    <p>Descubra a beleza da língua portuguesa com o nosso curso completo para iniciantes! 
+        Este programa de 12 semanas foi desenvolvido para introduzir os alunos ao vocabulário 
+        básico, à gramática e às habilidades de conversação em português. Através de aulas 
+        interativas, recursos multimídia envolventes e exercícios práticos, os alunos 
+        desenvolverão a capacidade de compreender e se comunicar em situações cotidianas. 
+        Nossos instrutores experientes fornecem feedback e suporte personalizados, garantindo 
+        uma base sólida em compreensão auditiva, fala, leitura e escrita. Seja para viajar, 
+        trabalhar ou enriquecer seus conhecimentos pessoais, este curso o colocará no caminho 
+        da fluência.Junte-se a nós e comece hoje mesmo sua jornada na língua portuguesa!</p>
+        </div>
 </section>
-<div>
-    <img class="img1" src="../Assets/talking1.jpg" alt="personas hablando">
-    <img class="img2" src="../Assets/talking 2.jpg" alt="personas hablando">
-    <img class="img3" src="../Assets/talking3.jpg" alt="personas hablando">
-    <img class="img4" src="../Assets/talking 4.jpg" alt="personas hablando">
-</div>
-<div class="div2">
-    <h1 class="enrolmenth1">Want to enroll in one of our courses? Leave us your contact info and one of our agents will get in touch!</h1>
+
+<div class="pictures">
+    <img class="imgcourses" src="../Assets/talking1.jpg" alt="personas hablando">
+    <img class="imgcourses" src="../Assets/talking 2.jpg" alt="personas hablando">
+    <img class="imgcourses" src="../Assets/talking3.jpg" alt="personas hablando">
+    <img class="imgcourses" src="../Assets/talking 4.jpg" alt="personas hablando">
 </div>
 
 <section class="enrolmentsection">
-        <form>
-        <label  for="name">Name</label> <br>
-        <input  type= "text" name="name" id="name" placeholder="Name"> <br>
-        <label  for="surname" >Surname</label> <br>
-        <input  type="text" name="surname" id="surname" placeholder="Surname"> <br>
-        <label  for="mother-language">Mother Language</label> <br>
-        <input  type="text" name="mother-language" id="mother-language" placeholder="Your L1"> <br>
-        <label  for="countryoo">Country of Origin</label> <br>
-        <input  type="text" name="countryoo" id="countryoo" placeholder="County of Origin">
-        </form>
+<div class="enrolment">
+    <h1 >Want to enroll in one of our courses? Leave us your contact info and one of our agents will get in touch!</h1>
+</div>
+<form>
+    <label  for="name">Name</label> <br>
+    <input  type= "text" name="name" id="name" placeholder="Name"> <br>
+    <label  for="surname" >Surname</label> <br>
+    <input  type="text" name="surname" id="surname" placeholder="Surname"> <br>
+    <label  for="mother-language">Mother Language</label> <br>
+    <input  type="text" name="mother-language" id="mother-language" placeholder="Your L1"> <br>
+    <label  for="countryoo">Country of Origin</label> <br>
+    <input  type="text" name="countryoo" id="countryoo" placeholder="County of Origin"> <br>
+    <button class="coursesbutton">Submit my info!</button>
+    </form>
 </section>
 
- <footer class="footer">
+<footer class="footer">
     <a href="">Contact information</a>
     <a href="">Copyright</a>
     <a href="">Terms of Service and Privacy Policy</a>
