--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-    <!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -10,19 +8,18 @@
 </head>
 <body> 
     <section class="section1">
-            <img class="imagen1" src="./Assets/redcliffe logo.jpg" alt="Logo de Redcliffe">
-        <ul class="ul1">
+            <img class="imagen1" src="./assets/logo.jpg" alt="Logo de Redcliffe">
+        <div class="ul1">
             <a class="link1" href="./sections/languages.html">Languages</a>
             <a class="link1" href="./sections/courses.html">Courses</a>
             <a class="link1" href="./sections/about_us.html">About us</a>
             <a class="link1" href="./sections/contact.html">Contact</a>
-        </ul>
+        </div>
         <h1 class="slogan">Redcliffe Languages </h1>
          </section>
 
     <section class="section2">    
             <iframe class="section2v" width="1000" height="600" src="https://www.youtube.com/embed/BF83GlBo-d0" title="Why these multilingual school kids want to learn more languages" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
     </section>
     <div class="transition">
         <p class="transitiontext1">"The journey of a thousand miles begins with a single step."</p>
@@ -41,6 +38,7 @@
             <a class="link23" href="">International exams</a>
             <a class="link24" href="">Business</a>
         </section>
+        
         <footer class="footer">
             <a class="footerbrand2" href="">Contact information</a>
             <a class="footerbrand3" href="">Copyright</a>
