--- a/sections/courses.html
+++ b/sections/courses.html
@@ -9,7 +9,7 @@
  <body>
     <Header>
     <h1>Courses</h1>    
-    <a href="../index.html">Home</a>
+    <a class="homea" href="../index.html">Home</a>
     </Header>
 <section class="courses1"> 
     <div>
